# geany

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  ChangeLog  DEPLOY.md  GEMINI.md  GPT.md  HANDOFF.md  IDEAS.md  MEMORY.md  Makefile.am  NOTEPADPP_PARITY.md  NOTEPAD_PLUS_PARITY_ANALYSIS.md  README.md  ROADMAP.md  SUBMODULES.md  SUBMODULE_INVENTORY.md  THANKS  TODO  TODO.md  VERSION.md  VISION.md  build_all.bat  build_bobgui.bat  build_geany.bat  build_geany_force.bat  build_geany_meson.bat  configure.ac  copilot-instructions.md  fix_msgwindow.patch  geany.desktop.in  get_version.sh  meson.build  wscript
geany-go/: .gitignore  Makefile  Makefile.am  README.md  go.mod  libgeanygo.h  main.go  meson.build
geany-go/cmd/geany-go/: main.go
geany-go/config/: manager.go  manager_test.go
geany-go/editor/: cursor.go  cursor_test.go  document.go  document_features.go  document_io.go  document_io_test.go  document_test.go  editor.go  editor_test.go  search.go  selection.go  selection_test.go
geany-go/engine/: blank_operations.go  editor.go  editor_test.go  io.go  line_operations.go  scintilla_constants.go
geany-go/filetypes/: filetypes.go  filetypes_test.go  manager.go
geany-go/log/: logger.go  logger_test.go
geany-go/macros/: engine.go  engine_test.go
geany-go/nav/: queue.go  queue_test.go
geany-go/plugins/: plugin.go  plugin_test.go
geany-go/project/: project.go  project_test.go
geany-go/scintilla/: scintilla.go  scintilla_backend.go  scintilla_test.go
geany-go/search/: engine.go  engine_test.go
geany-go/symbols/: symbol.go  symbol_test.go
geany-go/templates/: engine.go  engine_test.go
geany-go/textfx/: case.go  format.go  sort.go  textfx_test.go
geany-go/ui/: interfaces.go  mock_ui_test.go  tabs.go  tabs_test.go
geany-go/ui/bobgui/: application.go  application_test.go
geany-go/ui/bobui/: application.go
geany-go/ui/btk/: application.go
geany-go/utils/: file_utils.go  file_utils_test.go  string_utils.go  string_utils_test.go
geany-rust/: Cargo.toml  meson.build
geany-rust/src/: lib.rs  textfx.rs  ui.rs
variants/geany-bobgui/: README.md  meson.build  run-meson-dev.sh
variants/geany-bobgui/src/: main.c
variants/geany-bobgui/subprojects/: cairo.wrap  fribidi.wrap  gdk-pixbuf.wrap  glib.wrap  graphene.wrap  gvdb.wrap  harfbuzz.wrap  libepoxy.wrap  libffi.wrap  libjpeg-turbo.wrap  libpng.wrap  libtiff.wrap  pango.wrap  pcre2.wrap  pixman.wrap  proxy-libintl.wrap  sysprof.wrap  zlib.wrap
variants/geany-bobgui/subprojects/bobgui/: .editorconfig  .gitlab-ci.yml  AUTHORS  CONTRIBUTING.md  HANDOFF.md  NEWS  README.md  VERSION  bobgui.doap  bobgui.supp  make-pot  meson.build  meson.options
variants/geany-bobgui/subprojects/bobgui/.gitlab-ci/: README.md  flatpak-build.sh  run-style-check-diff.sh  run-tests.sh  test-docker.sh  test-msys2.sh
variants/geany-bobgui/subprojects/bobgui/bobgui/: bobgui-mime.xml  bobgui-text-input.xml  bobgui-win32.rc.body.in  bobgui.h  bobguiaboutdialog.c  bobguiaboutdialog.h  bobguiaccelgroup.c  bobguiaccelgroup.h  bobguiaccelgroupprivate.h  bobguiaccessible.c  bobguiaccessible.h  bobguiaccessibleattributeset.c  bobguiaccessibleattributesetprivate.h  bobguiaccessiblehypertext.c  bobguiaccessiblehypertext.h  bobguiaccessiblehypertextprivate.h  bobguiaccessibleprivate.h  bobguiaccessiblerange.c  bobguiaccessiblerange.h  bobguiaccessiblerangeprivate.h  bobguiaccessibletext.c  bobguiaccessibletext.h  bobguiaccessibletextprivate.h  bobguiaccessiblevalue.c  bobguiaccessiblevalueprivate.h  bobguiaccessiblevaluestatic.c  bobguiactionable.c  bobguiactionable.h  bobguiactionbar.c  bobguiactionbar.h  bobguiactionhelper.c  bobguiactionhelperprivate.h  bobguiactionmuxer.c  bobguiactionmuxerprivate.h  bobguiactionobservable.c  bobguiactionobservableprivate.h  bobguiactionobserver.c  bobguiactionobserverprivate.h  bobguiadjustment.c  bobguiadjustment.h  (+889 more)
variants/geany-bobgui/subprojects/bobgui/demos/: meson.build
variants/geany-bobgui/subprojects/bobgui/docs/: ACTION_METADATA_EVOLUTION.md  ACTION_REGISTRY_LAYER.md  ACTION_SECTION_MODEL.md  APP_FRAMEWORK_ERGONOMICS_PROGRESS.md  BUILD_VALIDATION_BLOCKERS_2026-04-05.md  CODEOWNERS  CODING-STYLE.md  COMMAND_PALETTE_LAYER.md  COMPETITIVE_REVIEW_2026-04-04.md  CPP_ACTION_VISITORS_AND_DOCK_PRESET_2026-04-05.md  CPP_APP_FRAMEWORK_LAYER.md  CPP_APP_LIFECYCLE_2026-04-05.md  CPP_APP_SHELL_PRESET_2026-04-05.md  CPP_DASHBOARD_SHELL_PRESET_2026-04-05.md  CPP_EXAMPLE_PRESETS_2026-04-05.md  CPP_FOCUSED_ACTION_METRICS_2026-04-05.md  CPP_PANEL_VISIBILITY_2026-04-05.md  CPP_STUDIO_SHELL_PRESET_2026-04-05.md  CPP_TOOLBAR_BUILDERS_2026-04-05.md  CPP_TOOL_SURFACE_BUILDERS_2026-04-05.md  CPP_TOOL_SURFACE_HELPERS_2026-04-05.md  CPP_TOOL_SURFACE_MODEL_2026-04-05.md  CPP_VISUAL_POLICY_LAYER_2026-04-05.md  CPP_WORKSPACE_AND_DOCUMENT_SHELL_2026-04-05.md  CPP_WORKSPACE_SURFACE_PRESETS_2026-04-05.md  GRAND_UNIFIED_ANALYSIS.md  HEADER_COMPATIBILITY_LAYER.md  HEADER_NORMALIZATION_PASS_2026-04-04.md  MODULE_CATEGORY_GUIDE.md  NETWORK_COMPATIBILITY_CONSOLIDATION.md  PARITY_ANALYSIS.md  PATH_NORMALIZATION_PLAN.md  PHASE_18_19_ANALYSIS.md  PUBLIC_BRANDING_CLEANUP_2026-04-05.md  QT_LIKE_BUT_NOT_QT_DIRECTION.md  RELEASE-HOWTO.md  RENAME_AUDIT_2026-04-05.md  TOOLBAR_AND_ACTION_SURFACES.md  ULTRASONIC_ANALYSIS.md  UMBRELLA_HEADER_EXPANSION.md  (+7 more)
variants/geany-bobgui/subprojects/bobgui/examples/: README  action-namespace.c  builder.c  builder.ui  drawing.c  grid-packing.c  labels.js  meson.build  plugman.c  search-bar.c  squares.py  sunny.c  window-default.c
variants/geany-bobgui/subprojects/bobgui/gdk/: filetransferportal.c  gdk-keysyms-update.py  gdk.c  gdk.h  (+109 more)
variants/geany-bobgui/subprojects/pcre2-10.44/: .meson-subproject-wrap-hash.txt
variants/geany-bobui/: CMakeLists.txt  README.md  run-windows-msvc.bat
variants/geany-bobui/src/: main.cpp  search_studio_backend.cpp
variants/geany-btk/: CMakeLists.txt  README.md  run-windows-msvc.bat
variants/geany-btk/cmake/: package-runtime.cmake  stage-runtime.cmake
variants/geany-btk/src/: main.cpp  search_studio_backend.cpp  search_studio_backend.h
(+3043 files in other folders)
